a few additional notes

--- a/1. Julia Basics.ipynb
+++ b/1. Julia Basics.ipynb
@@ -1398,6 +1398,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "key y, value: 25\n",
+      "key b, value: 2\n",
+      "key z, value: 26\n",
+      "key c, value: 3\n",
+      "key a, value: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for (k, v) in dd\n",
+    "    println(\"key $k, value: $v\")\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
