--- a/3. Types.ipynb
+++ b/3. Types.ipynb
@@ -13,6 +13,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Types vs Classes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Simply: \n",
+    "- OO: classes are **data + behavior** (nouns, nouns, nouns)\n",
+    "- Julia: types are **data**; behavior defined separately (cf. Haskell, other functional languages) (verbs are key)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Let's start with something basic:"
    ]
   },
@@ -860,8 +876,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Short answer: we must have this for function argument checking to work correctly, since collections to arguments of functions are checked as tuples. That is tuples must be covariant for `f(x::Real, y::Real)` to accept an integer and a floating point number.\n",
-    "\n",
+    "Short answer: we must have this for function argument checking to work correctly, since collections to arguments of functions are checked as tuples. That is tuples must be covariant for `f(x::Real, y::Real)` to accept an integer and a floating point number."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "So why all this fuss about types? Types and the type system are what allow multiple dispatch to work, and multiple dispatch and types are the key organizing principle of Julia code."
    ]
   }
