note on views and copies

--- a/1. Julia Basics.ipynb
+++ b/1. Julia Basics.ipynb
@@ -461,7 +461,16 @@
     }
    ],
    "source": [
-    "v[2:end]  # end keyword --> length(v)"
+    "v[2:end]  # end keyword --> length(v)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Slicing in Julia returns **copy, not view** (use `sub` or (v0.5) `view`)\n",
+    "\n",
+    "`Compat.jl` == `from __future__ import`"
    ]
   },
   {
