inserted dig at conference wifi

--- a/0. Why Julia.ipynb
+++ b/0. Why Julia.ipynb
@@ -32,6 +32,9 @@
    "source": [
     "# Following along\n",
     "\n",
+    "<img src=\"https://cdn.meme.am/instances/500x/71711850.jpg\">\n",
+    "\n",
+    "## If you have Julia...\n",
     "Slides and other material available at https://github.com/jmxpearson/julia-for-pythonistas"
    ]
   },
