minor text fixes

--- a/0. Why Julia.ipynb
+++ b/0. Why Julia.ipynb
@@ -110,8 +110,7 @@
     "- you rely critically on several packages that aren't available\n",
     "- you don’t have much need to optimize your code\n",
     "- you perform mostly data analysis and model building, as opposed to algorithm development\n",
-    "- you prioritize stability and reliability \n",
-    "    - (or don’t write a lot of tests for your own code)\n",
+    "- you prioritize long-term stability \n",
     "- you don’t want to devote time to keeping up with changes\n",
     "- you have zero background with compiled languages"
    ]
